# HW_M06_goit_py_DS

./: README.md  hw6.ipynb  pyproject.toml
