[tool.poetry]
name = "MODULE-06 Python Data Science"
version = "0.1.0"
description = "Learning without a teacher"
authors = ["Rishniak Valerii"]


[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
tqdm = "^4.66.1"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
scikit-learn ="^1.3.2"
jupyter = "^1.0.0"
lxml = "^4.9.3"
html5lib = "^1.1"
bs4 = "^0.0.1"
seaborn = "^0.13.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"